Fix and upgrade some unit tests
Note: a few unit tests are still missing since the KibConfig split, they will be added later.